	PR c++/32177 	* semantics.c (finish_omp_for): Call fold_build_cleanup_point_expr 	on init, the non-decl cond operand and increment value.

* g++.dg/gomp/pr32177.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@125544 138bc75d-0d04-0410-961f-82ee72b054a4